istio/4.destination-rule/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  selector:
    matchLabels:
      app: httpd
      type: web
  template:
    metadata:
      labels:
        app: httpd
        type: web
    spec:
      containers:
        - name: httpd
          image: httpd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
