istio/4.destination-rule/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo
  ports:
    - port: 8080
      protocol: TCP
      name: http
