istio/4.destination-rule/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    type: web
  ports:
    - port: 80
